tests/conformance/v1/fixtures/parse/valid/tool_with_params.ai
tool "search" {
    description: "Search tool"
}

tool "calculator" {
    description: "Calculator tool"
}