tests/conformance/v1/fixtures/parse/invalid/unquoted_app_name.ai
app TestApp {
    description: "This should fail"
}